--- a/ebeast/scrollbar.scss
+++ b/ebeast/scrollbar.scss
@@ -8,6 +8,7 @@ $scrollbar-handle-spread:	7.4%;
 $scrollbar-handle-base:		#707070;
 $scrollbar-handle-dim:		mix($scrollbar-background, $scrollbar-handle-base); 	// inactive
 $scrollbar-handle-hover:	adjust-color($scrollbar-handle-base, $lightness: +15%); // mouse hover
+$scrollbar-handle-bright:	adjust-color($scrollbar-handle-base, $lightness: +15%);	// button hover, inverted
 $webkit-scrollbar-thumb-border: change-color($scrollbar-track-border0, $alpha: 0.34);
 $scrollbar-shadow-rgba:		rgba(0, 0, 0, 0.25);
 
@@ -20,6 +21,7 @@ $scrollbar-shadow-rgba:		rgba(0, 0, 0, 0.25);
 ::-webkit-scrollbar-corner {
   background: $theme-background;
 }
+
 // track
 ::-webkit-scrollbar-track {
   border: 1px solid; border-radius: 999px;
@@ -33,6 +35,7 @@ $scrollbar-shadow-rgba:		rgba(0, 0, 0, 0.25);
     border-color: $scrollbar-track-border1 $scrollbar-track-border1 $scrollbar-track-border1 $scrollbar-track-border0;
   }
 }
+
 // thumb
 ::-webkit-scrollbar-thumb {
   border-radius: 999px;
@@ -59,6 +62,19 @@ $scrollbar-shadow-rgba:		rgba(0, 0, 0, 0.25);
 ::-webkit-scrollbar-thumb:vertical   { @include webkit-scrollbar-thumb (right); }
 ::-webkit-scrollbar-thumb:horizontal { @include webkit-scrollbar-thumb (bottom); }
 
+// webkit-scrollbar-button
+::-webkit-scrollbar-button {
+  height: $webkit-scrollbar-size; width: $webkit-scrollbar-size;
+  background: transparent;
+  background-position: center; background-repeat: no-repeat;
+  background-size: 80%; // background-size: contain;
+  border-radius: 999px;
+  &:hover { background-color: $scrollbar-handle-bright; }
+}
+::-webkit-scrollbar-button:vertical:decrement   { background-image: url(tri-n.png); }
+::-webkit-scrollbar-button:horizontal:increment { background-image: url(tri-e.png); }
+::-webkit-scrollbar-button:vertical:increment   { background-image: url(tri-s.png); }
+::-webkit-scrollbar-button:horizontal:decrement { background-image: url(tri-w.png); }
 
 // See Makefile.mk for scrollbar-arrow image generation
 @supports (--makefile: rule) {
