--- a/ebeast/app.scss
+++ b/ebeast/app.scss
@@ -1,15 +1,10 @@
+// app.scss -> b/styles.scss -> b/cssaux.scss -> variables.scss ; app.scss -> scrollbar.scss
 @import 'b/styles.scss';
 
 // == Settings ==
-$theme-foreground:		$b-theme-foreground;
-$theme-background:		$b-theme-background;
+$b-main-background-lg0:		lighten($b-main-background, 1%);
+$b-main-background-lg1:		darken($b-main-background, 1%);
 $theme-border-radius:		$b-theme-border-radius;
-$panel-background-lg0:		$b-panel-background-lg0;
-$panel-background-lg1:		$b-panel-background-lg1;
-$panel-background-lg:		$b-panel-background-lg;
-$panel-background-border:	$b-panel-background-border;
-$panel-background-light:	$b-panel-background-light;
-$panel-background-dark:		$b-panel-background-dark;
 $toolbar-background:		$b-toolbar-background;
 $toolbar-background-lg:		$b-toolbar-background-lg;
 $button-foreground:		$b-button-foreground;
@@ -28,22 +23,22 @@ $focus-outline:			$b-focus-outline;
 
 // == Body Styles ==
 BrowserWindowDefaults		{ ; // used by main.js
-				  backgroundColor:          $theme-background; 	// #rrggbb needed
-				  defaultFontSize:          14;              	// int needed
-				  defaultMonospaceFontSize: 13; }		// int needed
+				  backgroundColor:          $b-theme-background; 	// #rrggbb needed
+				  defaultFontSize:          14;              		// int needed
+				  defaultMonospaceFontSize: 13; }			// int needed
 @supports (--makefile: rule) {
-  gradient-01	{ im-convert: "-size 67x1080 -attenuate 0.2 +noise Uniform gradient:#{$panel-background-lg0}-#{$panel-background-lg1}"; }
+  gradient-01	{ im-convert: "-size 67x1080 -attenuate 0.2 +noise Uniform gradient:#{$b-main-background-lg0}-#{$b-main-background-lg1}"; }
 }
-@mixin gradient-01-bg		{ background-color: $theme-background;
+@mixin gradient-01-bg		{ background-color: $b-theme-background;
 				  // gradient with banding
-				  background-image: $panel-background-lg;
+				  background-image: linear-gradient(to bottom, $b-main-background-lg0 0%, $b-main-background-lg1 100%);
 				  // gradient image with reduced banding
 				  background: url(gradient-01.png) center repeat-x; background-size: auto 100%; }
 html				{ width: 100vw; height: 100vh; }
 body				{ width: 100%; height: 100%; overflow: hidden; font: inherit;
-				  padding: 0; margin: 0; color: $theme-foreground;
+				  padding: 0; margin: 0; color: $b-theme-foreground;
 				  @include gradient-01-bg; }
-body.window-inactive 		{ color: fade($theme-foreground, 80%); }
+body.window-inactive 		{ color: fade($b-theme-foreground, 80%); }
 *				{ box-sizing: border-box; text-overflow: ellipsis; }
 
 // == Scrollbars ==
