--- a/ebeast/variables.scss
+++ b/ebeast/variables.scss
@@ -1,1 +1,10 @@
-$b-theme-font-family: 'Inter';
+// This Source Code Form is licensed MPL-2.0: http://mozilla.org/MPL/2.0
+
+// == Font Basics ==
+$b-main-font-family: 'Inter';
+
+// == Basic Colors ==
+$b-main-foreground: 		#ffffff !default;
+$b-main-background: 		#303030 !default;
+$b-base-foreground: 		#f0f0f0 !default;
+$b-base-background: 		#202020 !default;
