--- a/ebeast/variables.scss
+++ b/ebeast/variables.scss
@@ -8,3 +8,12 @@ $b-main-foreground: 		#ffffff !default;
 $b-main-background: 		#303030 !default;
 $b-base-foreground: 		#f0f0f0 !default;
 $b-base-background: 		#202020 !default;
+$b-menu-foreground: 		#fcfcfc !default;
+$b-menu-fill:	 		darken($b-menu-foreground, 15%) !default;
+$b-menu-background: 		#383838 !default;
+$b-menu-disabled: 		#808080 !default;
+$b-menu-disabled-fill: 		darken($b-menu-disabled, 10%) !default;
+$b-menu-focus-bg: 		#dddddd !default;
+$b-menu-focus-fg: 		$b-menu-background !default;
+$b-menu-active-bg: 		$b-menu-foreground !default;
+$b-menu-active-fg: 		$b-menu-background !default;
