EBEAST: variables.scss: provide more menu styles
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/variables.scss
+++ b/ebeast/variables.scss
@@ -13,7 +13,10 @@ $b-menu-fill:	 		darken($b-menu-foreground, 15%) !default;
 $b-menu-background: 		#383838 !default;
 $b-menu-disabled: 		#808080 !default;
 $b-menu-disabled-fill: 		darken($b-menu-disabled, 10%) !default;
+$b-menu-separator: 		#909090 !default;
 $b-menu-focus-bg: 		#dddddd !default;
 $b-menu-focus-fg: 		$b-menu-background !default;
 $b-menu-active-bg: 		$b-menu-foreground !default;
 $b-menu-active-fg: 		$b-menu-background !default;
+$b-menu-padding: 		0.3em;
+$b-menu-spacing: 		0.75em;
