EBEAST: b/contextmenu.vue: add box-shadow
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/variables.scss
+++ b/ebeast/variables.scss
@@ -10,7 +10,7 @@ $b-base-foreground: 		#f0f0f0 !default;
 $b-base-background: 		#202020 !default;
 $b-menu-foreground: 		#fcfcfc !default;
 $b-menu-fill:	 		darken($b-menu-foreground, 15%) !default;
-$b-menu-background: 		#383838 !default;
+$b-menu-background: 		#333333 !default;
 $b-menu-disabled: 		#808080 !default;
 $b-menu-disabled-fill: 		darken($b-menu-disabled, 10%) !default;
 $b-menu-separator: 		#909090 !default;
@@ -19,4 +19,6 @@ $b-menu-focus-fg: 		$b-menu-background !default;
 $b-menu-active-bg: 		$b-menu-foreground !default;
 $b-menu-active-fg: 		$b-menu-background !default;
 $b-menu-padding: 		0.3em;
-$b-menu-spacing: 		0.75em;
+$b-menu-spacing: 		0.75em;	// icon spacing
+$b-menu-tightspace: 		0.3em;	// icon spacing when packed
+$b-menu-box-shadow: 		0 0 13px 1px #0005;
