--- a/ebeast/app.scss
+++ b/ebeast/app.scss
@@ -22,10 +22,10 @@ $glow-control:			$b-glow-control;
 $focus-outline:			$b-focus-outline;
 
 // == Body Styles ==
-BrowserWindowDefaults		{ ; // used by main.js
-				  backgroundColor:          $b-theme-background; 	// #rrggbb needed
-				  defaultFontSize:          14;              		// int needed
-				  defaultMonospaceFontSize: 13; }			// int needed
+BrowserWindowDefaults		{ backgroundColor:          $b-default-background-color;		// #rrggbb needed
+				  defaultFontSize:          $b-default-font-size / 1px;			// int needed
+				  defaultMonospaceFontSize: $b-default-monospace-font-size / 1px;	// int needed
+				}	// used by main.js
 @supports (--makefile: rule) {
   gradient-01	{ im-convert: "-size 67x1080 -attenuate 0.2 +noise Uniform gradient:#{$b-main-background-lg0}-#{$b-main-background-lg1}"; }
 }
@@ -34,7 +34,10 @@ BrowserWindowDefaults		{ ; // used by main.js
 				  background-image: linear-gradient(to bottom, $b-main-background-lg0 0%, $b-main-background-lg1 100%);
 				  // gradient image with reduced banding
 				  background: url(gradient-01.png) center repeat-x; background-size: auto 100%; }
-html				{ width: 100vw; height: 100vh; }
+html				{ width: 100vw; height: 100vh;
+				  background-color: $b-default-background-color;
+				  font-size: $b-default-font-size;
+				}
 body				{ width: 100%; height: 100%; overflow: hidden; font: inherit;
 				  padding: 0; margin: 0; color: $b-theme-foreground;
 				  @include gradient-01-bg; }
