--- a/ebeast/variables.scss
+++ b/ebeast/variables.scss
@@ -22,3 +22,8 @@ $b-menu-padding: 		0.3em;
 $b-menu-spacing: 		0.75em;	// icon spacing
 $b-menu-tightspace: 		0.3em;	// icon spacing when packed
 $b-menu-box-shadow: 		0 0 13px 1px #0005;
+
+// == BrowserWindow Defaults ==
+$b-default-background-color:	$b-main-background;	// #rrggbb needed
+$b-default-font-size:		14px;          		// int px needed
+$b-default-monospace-font-size: 13px;			// int px needed
