EBEAST: adjust part thumbnail colors and style
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/b/styles.scss
+++ b/ebeast/b/styles.scss
@@ -42,7 +42,8 @@ $b-track-list-row-height: 2em !default;
 $b-part-thumb-font: bold 0.75em $b-theme-font-family !default; // format: italic small-caps bold 12px serif
 $b-part-thumb-font-color: rgba(255, 255, 255, 0.7) !default;
 $b-part-thumb-note-color: rgba(255, 255, 255, 0.7) !default;
-$b-part-thumb-colors: #ff7b50, #f68403, #d6960e, #92ad19, #67b518, #22bb27, #21b873, #24b3b3, #11adeb, #799fff, #a094ff, #c287ff, #e473ff, #ff5ff5, #ff70b0 !default;
+$b-part-thumb-colors: #ff7b50a7, #f68403a7, #d6960ea7, #92ad19a7, #67b518a7, #22bb27a7, #21b873a7, #24b3b3a7,
+	              #11adeba7, #799fffa7, #a094ffa7, #c287ffa7, #e473ffa7, #ff5ff5a7, #ff70b0a7 !default;
 
 // b-piano-roll
 $b-piano-roll-font:	     	bold 0.75em $b-theme-font-family !default;	// format: italic small-caps bold 12px serif
