--- a/ebeast/b/styles.scss
+++ b/ebeast/b/styles.scss
@@ -38,12 +38,13 @@ $b-scrollbar-thickness:	7px !default;
 // b-track-list
 $b-track-list-row-height: 2em !default;
 
+// format: font: italic small-caps bold 12px serif;
+
 // b-part-thumb
-$b-part-thumb-font: bold 1.5em $b-theme-font-family !default; // format: italic small-caps bold 12px serif
+$b-part-thumb-font: normal 9px $b-theme-font-family !default;	// the '9px' part is dynamically resized
 $b-part-thumb-font-color: rgba(255, 255, 255, 0.7) !default;
 $b-part-thumb-note-color: rgba(255, 255, 255, 0.7) !default;
-$b-part-thumb-colors: #ff7b50a7, #f68403a7, #d6960ea7, #92ad19a7, #67b518a7, #22bb27a7, #21b873a7, #24b3b3a7,
-	              #11adeba7, #799fffa7, #a094ffa7, #c287ffa7, #e473ffa7, #ff5ff5a7, #ff70b0a7 !default;
+$b-part-thumb-colors: #ff7b50a7, #f68403a7, #d6960ea7, #92ad19a7, #67b518a7, #22bb27a7, #21b873a7, #24b3b3a7, #11adeba7, #799fffa7, #a094ffa7, #c287ffa7, #e473ffa7, #ff5ff5a7, #ff70b0a7 !default;
 
 // b-piano-roll
 $b-piano-roll-font:	     	bold 0.75em $b-theme-font-family !default;	// format: italic small-caps bold 12px serif
