EBEAST: variables.scss: add b-style-modal-overlay for overlay backgrounds
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/variables.scss
+++ b/ebeast/variables.scss
@@ -26,6 +26,7 @@ $b-style-focus-color:		#0080ff !default;
 $b-style-border-radius:         3px !default;
 $b-style-light-foreground:	$b-main-foreground !default;
 $b-style-dark-outline:		#181818 !default;
+$b-style-modal-overlay:		#222b !default;
 
 // == BrowserWindow Defaults ==
 $b-default-background-color:	$b-main-background;	// #rrggbb needed
