--- a/ebeast/b/styles.scss
+++ b/ebeast/b/styles.scss
@@ -1,7 +1,7 @@
 // This Source Code Form is licensed MPL-2.0: http://mozilla.org/MPL/2.0
 
-// == Scss Helper Functions ==
-@import 'cssaux.scss';
+// == Scss Theme Basics ==
+@import '../variables.scss';
 
 // == Variables ==
 // Only put *!default* definitions here, so `variables.scss` takes precedence.
