--- a/ebeast/variables.scss
+++ b/ebeast/variables.scss
@@ -1,5 +1,8 @@
 // This Source Code Form is licensed MPL-2.0: http://mozilla.org/MPL/2.0
 
+// == Import helpers ==
+@import 'cssaux.scss';
+
 // == Font Basics ==
 $b-main-font-family: 'Inter';
 
