DOCS: extrastyles.css: fix member list table formatting
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/docs/extrastyles.css
+++ b/docs/extrastyles.css
@@ -55,3 +55,7 @@ table.fieldtable		{ border: none; box-shadow: none; line-height: 1.5em; }
 table.fieldtable th		{ background-image: none; display: none; }
 table.fieldtable td.fieldname,
 table.fieldtable td.fielddoc	{ /*border-bottom: 1px solid #DEE4F0;*/ border: none; }
+
+table.memberdecls td.memTemplItemLeft,
+table.memberdecls td.memItemLeft	{ max-width: 20em; overflow: hidden; font-size: 70%; }
+table.memberdecls td.mdescRight		{ font-size: 85%; text-indent: 3em; }
